--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -23,7 +23,7 @@ body {
 }
 
 .mt-60 {
-  margin-top: 120px;
+  margin-top: 60px;
 }
 
 .mb-120 {
@@ -190,6 +190,54 @@ body {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fff9f3",endColorstr="#fff9f3",GradientType=1);
 }
 
+.offer-text {
+  position: relative;
+  width: 950px;
+  padding: 50px 50px 50px 200px;
+  background: url("../img/landingImg.jpg") no-repeat;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.offer-text h2, .offer-text p {
+  z-index: 10;
+}
+.offer-text p {
+  margin: 5px 0 5px 0;
+  font-size: 1.15rem;
+}
+.offer-text > div {
+  position: relative;
+  display: flex;
+}
+.offer-text > div > h2 {
+  z-index: 5;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-size: 2rem;
+  font-weight: normal;
+}
+.offer-text > div > h2::after {
+  position: absolute;
+  content: "";
+  width: 120px;
+  height: 15px;
+  top: 40px;
+  left: 0;
+  background-color: #AA81AA;
+  z-index: -50;
+}
+.offer-text::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(90deg, #fff9f3 0%, rgba(255, 249, 243, 0) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fff9f3",endColorstr="#fff9f3",GradientType=1);
+}
+
 .home-image {
   position: relative;
   min-height: 100%;
@@ -213,14 +261,19 @@ body {
   transition: 0.4s;
 }
 
-.home-container {
+.section-container {
   height: 710px;
   background-color: #FFF9F3;
   box-shadow: 0px 0px 50px 20px rgba(0, 0, 0, 0.25);
 }
 
+.shadow-container {
+  background-color: #FFF9F3;
+  box-shadow: 0px 0px 50px 20px rgba(0, 0, 0, 0.25);
+}
+
 .btn {
-  background-color: #AA81AA;
+  background: #AA81AA;
   font-size: 2rem;
   border-radius: 10px;
   z-index: 20;
@@ -228,68 +281,58 @@ body {
   width: 250px;
   padding: 5px;
   font-weight: 700;
-  transition: 0.3s;
+  transition: 0.2s;
 }
 .btn:hover {
-  background-color: #c1a4c1;
+  color: #FFF9F3;
   cursor: pointer;
 }
 
-.example-gallery {
+.example-work {
+  margin-top: 40px;
+  margin-bottom: 40px;
+  width: 100%;
+}
+
+.content-card {
+  height: 600px;
+  width: 380px;
   background-color: #FFF9F3;
-  margin-top: 120px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  width: 100%;
 }
-.example-gallery .image {
-  box-shadow: 0px 0px 50px 20px rgba(0, 0, 0, 0.25);
-  position: relative;
-  margin: 10px;
-  flex: 23%;
-  overflow: hidden;
-  cursor: pointer;
-  max-width: 300px;
-  max-height: 300px;
-}
-.example-gallery .image:nth-child(1), .example-gallery .image:nth-child(5) {
-  margin-left: 0px;
-}
-.example-gallery .image:nth-child(4), .example-gallery .image:nth-child(8) {
-  margin-right: 0px;
-}
-.example-gallery img {
-  width: 100%;
-  height: 100%;
-  transition: 0.4s;
+.content-card img {
+  width: 380px;
+  height: 340px;
+  min-height: 340px;
+  margin: 0;
   object-fit: cover;
 }
-.example-gallery .image:hover img {
-  transform: scale(1.4);
-  filter: blur(3px);
-}
-.example-gallery .image:hover::after {
-  content: "See More";
-  opacity: 1;
-  top: 0;
-}
-.example-gallery .image::after {
-  content: "";
-  transition: 0.3s;
-  color: #1E1E1E;
-  text-align: center;
-  background-color: #AA81AA;
-  transition: 0.3s;
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  top: -50%;
-  left: 0;
-  padding: 45% 0 45% 0;
+.content-card h3 {
+  margin-top: 0;
   font-size: 2rem;
-  opacity: 0;
-  font-weight: 700;
+  font-weight: bold;
+}
+.card-desc {
+  height: 160px;
+  margin: 30px 30px 0px 30px;
+}
+
+.card-link {
+  height: 60px;
+  width: 100%;
+  margin-left: 30px;
+}
+.card-link a {
+  text-decoration: none;
+  color: #1E1E1E;
+  width: 100%;
+  text-align: center;
+}
+.card-link a:hover {
+  color: #FFF9F3;
+}
+.card-link a .btn {
+  padding: 7px;
+  font-size: 1.5rem;
 }
 
 .contact-form {
@@ -309,18 +352,20 @@ body {
   z-index: 10;
 }
 .contact-form h1 {
-  font-family: SofiaFont;
+  text-align: center;
+  font-family: Tahoma, sans-serif;
   margin-top: 0;
   margin-bottom: 0;
   font-weight: 900;
   font-size: 3rem;
 }
 .contact-form label {
+  font-family: Tahoma, sans-serif;
   font-weight: 700;
   margin-top: 10px;
-  margin-left: 10px;
+  margin-left: 20px;
   margin-bottom: 2px;
-  letter-spacing: 1px;
+  font-size: 1.05rem;
 }
 .contact-form::after {
   position: absolute;
@@ -382,7 +427,7 @@ body {
 
 input[type=text], textarea {
   height: 40px;
-  padding: 10px;
+  padding: 20px;
   box-sizing: border-box;
   border: none;
   background-color: #E0C6E0;
@@ -396,13 +441,22 @@ input[type=text]:focus, input[type=text]:active, textarea:focus, textarea:active
   outline: none;
 }
 
-::placeholder {
+::placeholder, textarea::placeholder {
+  font-family: Tahoma, sans-serif;
   color: #AA81AA;
   opacity: 1;
   /* Firefox */
   font-size: 0.9rem;
   font-weight: 700;
-  letter-spacing: 2px;
+}
+
+textarea::placeholder {
+  font-family: Tahoma, sans-serif;
+  color: #AA81AA;
+  opacity: 1;
+  /* Firefox */
+  font-size: 0.9rem;
+  font-weight: 700;
 }
 
 :-ms-input-placeholder {
@@ -421,14 +475,8 @@ textarea {
   min-width: 550px;
   max-height: 550px;
   min-height: 32px;
-}
-textarea::placeholder {
-  color: #AA81AA;
-  opacity: 1;
-  /* Firefox */
-  font-size: 1rem;
-  font-family: "Trebuchet MS", sans-serif;
-  font-weight: 700;
+  font-family: Arial;
+  font-weight: 900;
 }
 
 .loading-spinner {
@@ -532,6 +580,45 @@ textarea::placeholder {
   height: 20px;
   background-color: #AA81AA;
   z-index: -1;
+}
+
+.offer-container {
+  width: 100%;
+}
+
+.portfolio-container {
+  padding: 30px;
+  width: 1140px;
+  margin-bottom: 120px;
+}
+.portfolio-container div {
+  overflow: hidden;
+}
+.portfolio-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.my-masonry-grid {
+  /* Not needed if autoprefixing */
+  /* Not needed if autoprefixing */
+  display: flex;
+  margin-left: -30px;
+  /* gutter size offset */
+  width: auto;
+}
+
+.my-masonry-grid_column {
+  padding-left: 30px;
+  /* gutter size */
+  background-clip: padding-box;
+}
+
+/* Style your items */
+.my-masonry-grid_column > div {
+  /* change div to reference your elements you put in <Masonry> */
+  margin-bottom: 30px;
 }
 
 .logo {
