--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -31,7 +31,7 @@ body{
     margin-top: 15px;
 }
 .mt-60{
-    margin-top: 120px;
+    margin-top: 60px;
 }
 .mb-120{
     margin-bottom: 120px;
@@ -194,6 +194,63 @@ body{
         filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fff9f3",endColorstr="#fff9f3",GradientType=1);   
     }
 }
+
+.offer-text{
+    position: relative;
+    width:950px;
+    padding: 50px 50px 50px 200px;
+    background: url('../img/landingImg.jpg') no-repeat;
+    background-repeat: no-repeat;
+    background-position: center; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+
+    & h2,p {
+        z-index: 10;
+    }
+    & p {
+        margin:5px 0 5px 0;
+        font-size: 1.15rem;
+    }
+
+    & > div {
+        position:relative;
+        display: flex;
+    }
+    & > div > h2{
+        z-index: 5;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        font-size: 2rem;
+        font-weight: normal;
+        &::after{
+            position: absolute;
+            content:"";
+            width:120px;
+            height:15px;
+            top:40px;
+            left:0;
+            background-color: $first-color;
+            z-index: -50;
+        }
+    }
+
+    &::after{
+        position: absolute;
+        top: 0;
+        left: 0;
+        content: "";
+        width: 100%;
+        height: 100%;
+        background: -moz-linear-gradient(90deg, rgba(255,249,243,1) 0%, rgba(255,249,243,0) 100%);
+        background: -webkit-linear-gradient(90deg, rgba(255,249,243,1) 0%, rgba(255,249,243,0) 100%);
+        background: linear-gradient(90deg, rgba(255,249,243,1) 0%, rgba(255,249,243,0) 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fff9f3",endColorstr="#fff9f3",GradientType=1);   
+    }
+}
+
 .home-image{
     position: relative;
     min-height:100%;
@@ -216,13 +273,17 @@ body{
         transition: .4s;
     }
 }
-.home-container{
+.section-container{
     height: 710px;
     background-color: #FFF9F3;
     box-shadow: 0px 0px 50px 20px rgba(0, 0, 0, 0.25);
 }
+.shadow-container{
+    background-color: #FFF9F3;
+    box-shadow: 0px 0px 50px 20px rgba(0, 0, 0, 0.25);
+}
 .btn{
-    background-color: $first-color;
+    background: $first-color;
     font-size: 2rem;
     border-radius: 10px;
     z-index: 20;
@@ -230,70 +291,64 @@ body{
     width: 250px;
     padding: 5px;
     font-weight: 700;
-    transition: .3s;
+    transition: .2s;
     &:hover{
-        background-color: $first-color-hover;
+        color:$background-color;
         cursor: pointer;
     }
 }
-.example-gallery{
-    background-color: $background-color;
-    margin-top: 120px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+.example-work{
+    margin-top: 40px;
+    margin-bottom: 40px;
     width: 100%;
-    & .image{
-        box-shadow: 0px 0px 50px 20px rgba(0, 0, 0, 0.25);
-        position: relative;
-        margin: 10px;
-        flex: 23%;
-        overflow: hidden;
-        cursor: pointer;
-        max-width: 300px;
-        max-height: 300px;
-        &:nth-child(1),&:nth-child(5){
-            margin-left: 0px;
-        }
-        &:nth-child(4),&:nth-child(8){
-            margin-right: 0px;
-        }
-    }
+}
+
+.content-card{
+    height: 600px;
+    width: 380px;
+    background-color: $background-color;
     & img {
-        width: 100%;
-        height: 100%;
-        transition: 0.4s;
+        width: 380px;
+        height: 340px;
+        min-height: 340px;
+        margin: 0;
         object-fit: cover;
     }
-    & .image:hover img{
-        transform: scale(1.4);
-        filter:blur(3px);
+
+    & h3 {
+        margin-top: 0;
+        font-size:2rem;
+        font-weight: bold;
     }
-    & .image:hover {
-        &::after {
-            content: "See More";
-            opacity: 1;
-            top:0;
-        }
-    }
-    & .image::after {
-        content: "";
-        transition: .3s;
-        color: $text-color;
-        text-align: center;
-        background-color: $first-color;
-        transition: .3s;
-        position:absolute;
-        height:100%;
-        width: 100%;
-        top:-50%;
-        left:0;
-        padding: 45% 0 45% 0;
-        font-size: 2rem;
-        opacity: 0;
-        font-weight: 700;
+    & p {
+
     }
 }
+.card-desc{
+    height: 160px;
+    margin: 30px 30px 0px 30px;
+}
+.card-link{
+    height: 60px;
+    width: 100%;
+    margin-left: 30px;
+    & a{
+        text-decoration: none;
+        color:$text-color;
+        width: 100%;
+        text-align: center;
+        &:hover{
+            color:$background-color;
+        }
+
+        & .btn {
+            padding: 7px;
+            font-size: 1.5rem;
+        }
+    }
+   
+}
+
 .contact-form{
     z-index: 1;
     position: relative;
@@ -305,24 +360,27 @@ body{
     -o-background-size: cover;
     background-size: cover;
 
-    & h1,label,input[type=text], textarea{
+    & h1,label,input[type=text],textarea{
         z-index: 10;
     }
 
     & h1{
-        font-family: SofiaFont;
+        text-align: center;
+        font-family: Tahoma, sans-serif;
         margin-top: 0;
         margin-bottom: 0;
         font-weight: 900;
         font-size: 3rem;
     }
     & label {
+        font-family: Tahoma, sans-serif;
         font-weight: 700;
         margin-top: 10px;
-        margin-left: 10px;
+        margin-left: 20px;
         margin-bottom:2px;
-        letter-spacing: 1px;
+        font-size: 1.05rem;
     }
+    
     width: 600px;
     background-color: #FFF9F3;
     box-shadow: 0px 0px 50px 20px rgba(0, 0, 0, 0.25);
@@ -391,9 +449,9 @@ body{
         z-index: 0;
     }
 }
-input[type=text], textarea {
+input[type=text],textarea {
     height: 40px;
-    padding: 10px;
+    padding: 20px;
     box-sizing: border-box;
     border: none;
     background-color: #E0C6E0;
@@ -407,13 +465,21 @@ input[type=text], textarea {
         outline: none;
     }
 }
-::placeholder {
+
+::placeholder, textarea::placeholder {
+    font-family: Tahoma, sans-serif;
     color: $first-color;
     opacity: 1; /* Firefox */
     font-size: 0.9rem;
     font-weight: 700;
-    letter-spacing: 2px;
   }
+  textarea::placeholder{
+    font-family: Tahoma, sans-serif;
+    color: $first-color;
+    opacity: 1; /* Firefox */
+    font-size: 0.9rem;
+    font-weight: 700;
+}
   
   :-ms-input-placeholder { /* Internet Explorer 10-11 */
    color: $first-color;
@@ -423,18 +489,13 @@ input[type=text], textarea {
    color:$first-color;
   }
 textarea{
-    &::placeholder {
-        color: $first-color;
-        opacity: 1; /* Firefox */
-        font-size: 1rem;
-        font-family: 'Trebuchet MS', sans-serif;
-        font-weight: 700;
-      }
     height:100px;
     max-width:550px;
     min-width:550px;
     max-height:550px;
     min-height: 32px;
+    font-family: Arial;
+    font-weight: 900;
 }
 .loading-spinner {
     width: 50px;
@@ -535,6 +596,38 @@ textarea{
         }
     }
 }
+.offer-container{
+    width:100%;
+}
+.portfolio-container{
+    padding: 30px;
+    width:1140px;
+    margin-bottom:120px;
+    & div {
+        overflow: hidden;
+    }
+    & img {
+        width: 100%;
+        height:100%;
+        object-fit: cover;
+    }
+}
+.my-masonry-grid {
+    display: -webkit-box; /* Not needed if autoprefixing */
+    display: -ms-flexbox; /* Not needed if autoprefixing */
+    display: flex;
+    margin-left: -30px; /* gutter size offset */
+    width: auto;
+  }
+  .my-masonry-grid_column {
+    padding-left: 30px; /* gutter size */
+    background-clip: padding-box;
+  }
+   
+  /* Style your items */
+  .my-masonry-grid_column > div { /* change div to reference your elements you put in <Masonry> */
+    margin-bottom: 30px;
+  }
 
 
 
