--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -168,6 +168,12 @@ body {
   transform: scale(1.3, 1.3);
   cursor: pointer;
 }
+.social-media > a {
+  color: #FFF9F3;
+  text-decoration: none;
+  margin: 0 10px 0 10px;
+  font-size: 1.2rem;
+}
 
 .content-container {
   background-color: #FFF9F3;
@@ -182,6 +188,9 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+}
+.home-text > a {
+  z-index: 1000;
 }
 .home-text h2, .home-text p {
   z-index: 10;
@@ -261,7 +270,7 @@ body {
   min-width: 33%;
   width: 33%;
   box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.25);
-  z-index: 15;
+  z-index: 0;
 }
 .home-image > :nth-child(3) {
   top: 58%;
@@ -374,7 +383,6 @@ body {
   background-position: center;
   background-size: cover;
   width: 600px;
-  box-shadow: 0px 0px 50px 20px rgba(0, 0, 0, 0.25);
   margin: 45px 0 45px 0px;
   padding: 30px 30px 20px 30px;
 }
@@ -404,7 +412,7 @@ body {
   content: "";
   width: 100%;
   height: 100%;
-  background: linear-gradient(90deg, #fff9f3 0%, rgba(255, 249, 243, 0) 100%);
+  background: linear-gradient(270deg, #fff9f3 0%, rgba(255, 249, 243, 0.5) 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fff9f3",endColorstr="#fff9f3",GradientType=1);
 }
 
@@ -415,7 +423,7 @@ body {
   background-size: cover;
   z-index: -5;
   width: 500px;
-  height: 551px;
+  height: 600px;
   z-index: 0;
 }
 .contact-info div {
@@ -551,6 +559,7 @@ textarea {
 }
 
 .bottom-links {
+  text-align: center;
   position: fixed;
   width: 100%;
   bottom: 0;
@@ -955,6 +964,15 @@ textarea {
 }
 
 @media only screen and (max-width: 1000px) {
+  .my-masonry-grid_column {
+    /* gutter size */
+    background-clip: padding-box;
+  }
+  .my-masonry-grid_column > .gatsby-image-wrapper {
+    width: 100%;
+    max-width: unset;
+  }
+
   .gatsby-image-wrapper {
     max-width: 100px;
   }
@@ -1116,13 +1134,10 @@ textarea {
     padding-left: 30px;
     padding-right: 30px;
   }
-  .home-text p:nth-child(2) {
-    display: none;
-  }
   .home-text h2 {
     font-size: 2.6rem;
   }
-  .home-text > .btn {
+  .home-text > a {
     display: none;
   }
   .home-text::after {
@@ -1160,15 +1175,11 @@ textarea {
     font-weight: 500;
     letter-spacing: 1px;
     transition: 0.3s;
-    font-size: 1.1rem;
+    font-size: 0.7rem;
     text-align: center;
   }
   .bottom-links a:hover {
     color: #AA81AA;
-  }
-  .bottom-links > div {
-    display: flex;
-    flex-direction: column;
   }
 
   .offer-text::after {
@@ -1198,7 +1209,7 @@ textarea {
   }
   .offer-text p {
     padding: 0 20px 0 20px;
-    font-size: 1rem;
+    font-size: 0.9rem;
   }
   .offer-text > div > h2 {
     z-index: 5;
@@ -1257,6 +1268,7 @@ textarea {
   .card-desc {
     margin: 15px;
     width: 85%;
+    font-size: 0.9rem;
   }
   .card-desc h3 {
     margin-bottom: 10px;
@@ -1270,7 +1282,7 @@ textarea {
     width: 200px;
   }
   .card-link a .btn {
-    font-size: 1.2rem;
+    font-size: 1rem;
   }
 
   .content-card {
@@ -1278,7 +1290,7 @@ textarea {
     height: 460px;
   }
   .content-card h3 {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
   }
 
   .contact-form-container {
