--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -165,6 +165,13 @@ body{
             cursor: pointer;
         }
     }
+
+    & > a {
+        color: $background-color;
+        text-decoration: none;
+        margin: 0 10px 0 10px;
+        font-size: 1.2rem
+    }
 }
 .content-container{
     background-color: #FFF9F3;
@@ -181,6 +188,10 @@ body{
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+
+    & > a {
+        z-index: 1000;
+    }
 
     & h2,p {
         z-index: 10;
@@ -273,7 +284,7 @@ body{
     min-width:33%;
     width:33%;
     box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.25);
-    z-index: 15;
+    z-index: 0;
     &>:nth-child(3){
         top:58%;
         font-weight: 100;
@@ -407,7 +418,7 @@ body{
     }
     
     width: 600px;
-    box-shadow: 0px 0px 50px 20px rgba(0, 0, 0, 0.25);
+    
     margin: 45px 0 45px 0px;
     padding: 30px 30px 20px 30px;
     &::after{
@@ -417,9 +428,9 @@ body{
         content: "";
         width: 100%;
         height: 100%;
-        background: -moz-linear-gradient(90deg, rgba(255,249,243,1) 0%, rgba(255,249,243,0) 100%);
-        background: -webkit-linear-gradient(90deg, rgba(255,249,243,1) 0%, rgba(255,249,243,0) 100%);
-        background: linear-gradient(90deg, rgba(255,249,243,1) 0%, rgba(255,249,243,0) 100%);
+        background: -moz-linear-gradient(270deg, rgba(255,249,243,1) 0%, rgba(255,249,243,0.5) 100%);
+        background: -webkit-linear-gradient(270deg, rgba(255,249,243,1) 0%, rgba(255,249,243,0.5) 100%);
+        background: linear-gradient(270deg, rgba(255,249,243,1) 0%, rgba(255,249,243,0.5) 100%);
         filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fff9f3",endColorstr="#fff9f3",GradientType=1);   
     }
 }
@@ -434,7 +445,7 @@ body{
     background-size: cover;
     z-index: -5;
     width: 500px;
-    height:551px;
+    height:600px;
     z-index: 0;
     & div {
         z-index: 20;
@@ -561,6 +572,7 @@ textarea{
     width: 100%;
 }
 .bottom-links{
+    text-align: center;
     position: fixed;
     width:100%;
     bottom: 0;
@@ -951,6 +963,14 @@ textarea{
 }
   @media only screen and (max-width:1000px)
   {
+    .my-masonry-grid_column {
+        & > .gatsby-image-wrapper{
+            width: 100%;
+            max-width:unset;
+        }
+         /* gutter size */
+        background-clip: padding-box;
+      }
     .gatsby-image-wrapper {
         max-width: 100px;
     }
@@ -1110,13 +1130,10 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fef6f2",endCo
     .home-text{
         padding-left: 30px;
         padding-right: 30px;
-        & p:nth-child(2){
-            display: none;
-        }
         & h2{
           font-size: 2.6rem;
       }
-      & > .btn {
+      & > a {
           display: none;
       }
       &::after{
@@ -1151,15 +1168,11 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fef6f2",endCo
             font-weight: 500;
             letter-spacing: 1px;
             transition: .3s;
-            font-size: 1.10rem;
+            font-size: 0.7rem;
             text-align: center;
             &:hover {
                 color: $first-color;
             }
-        }
-        & > div {
-            display: flex;
-            flex-direction: column;
         }
     }
     .offer-text{
@@ -1191,7 +1204,7 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fef6f2",endCo
         min-height: 100vh;
         & p {
             padding: 0 20px 0 20px;
-            font-size: 1rem;
+            font-size: 0.9rem;
         }
         & > div > h2{
             z-index: 5;
@@ -1253,6 +1266,7 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fef6f2",endCo
             margin-bottom:10px;
         }
        width:85%;
+       font-size: 0.9rem;
     }
     .card-link{
         top:410px;
@@ -1261,7 +1275,7 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fef6f2",endCo
             width: 200px;
         }
         & a .btn {
-            font-size: 1.2rem;
+            font-size: 1rem;
         }
     }
     .content-card{
@@ -1269,7 +1283,7 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fef6f2",endCo
         height: 460px;
     
         & h3 {
-            font-size:1.5rem;
+            font-size:1.2rem;
         }
     }
     .contact-form-container{
